allow for optional router setting

--- a/templates/dhcpd.pool.erb
+++ b/templates/dhcpd.pool.erb
@@ -13,7 +13,9 @@ subnet <%= network %> netmask <%= mask %> {
   }
 
   option subnet-mask <%= mask %>;
+<% if gateway != '' -%>
   option routers <%= gateway %>;
+<% end -%>
 <% if options.is_a? Array -%>
 <%   options.each do |opt| -%>
   option <%= opt %>;
